--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -13,6 +13,12 @@ java {
 	}
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor  // 프로젝트 빌드시 그래들이 설정 프로세서를 사용하도록 설정
+	}
+}
+
 repositories {
 	mavenCentral()
 }
@@ -23,6 +29,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'  // 메타데이터가 자동으로 생성되어, 속성의 자동 완성 및 유형 검사가 가능함
 }
 
 tasks.named('test') {
