CH4.1-활성화할 프로파일 설정
spring.profiles.active 를 testdata로 설정하여 활성화할 프로파일을 testdata로 설정

--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -32,6 +32,10 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'  // 메타데이터가 자동으로 생성되어, 속성의 자동 완성 및 유형 검사가 가능함
 }
 
+bootRun {
+	systemProperty 'spring.profiles.active', 'testdata'
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
