--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -15,6 +15,14 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888 # 설정 서버의 url주소
+      request-connect-timeout: 5000 # 설정 서버에 연결될 때까지 최대로 기다리는 시간
+      request-read-timeout: 5000 # 설정 서버에서 데이터를 읽을 떄까지 최대로 기다리는 시간
+      fail-fast: true # 설정 서버 연결 실패를 심각한 실패로 간주
+      retry: # 심각한 실패(fail-fast: true)일 경우만 retry가 활성화 된다.
+        max-attempts: 6 # 최대 시도 횟수
+        initial-interval: 1000 # 최초 재시도 지연 시간
+        max-interval: 2000 # 재시도 지연 최대 시간
+        multiplier: 1.1 # 지연 시간 계산 승수
 
 polar:
   greeting: Welcome to the local book catalog!
