CH4.4-런타임 시 설정 새로고침
애플리케이션(A), 설정 서버(B)가 동작 중일 때 설정 저장소(C) 데이터가 바뀌었다면 애플리케이션(A)에서 http post /actuator/refresh 명령어를 통해 설정서버(B)에게 최신 설정 데이터를 요청하고 설정 서버(B)는 설정 저장소(C)에서 최신 데이터를 애플리케이션(A)에 전달에 재빌드나 재시작을 하지 않고 최신의 설정 데이터를 가져올 수 있도록 해준다.
* actuator을 위해선 새로고침 이벤트인 RefreshScopeRefreshedEvent 를 처리해줘야 하는데 catalog-service의 config/polarProperties 에 @ConfigurationProperties가 새로고침 이벤트를 처리해줌
* 더 자세한 actuator 는 13장에서 공부

--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
         initial-interval: 1000 # 최초 재시도 지연 시간
         max-interval: 2000 # 재시도 지연 최대 시간
         multiplier: 1.1 # 지연 시간 계산 승수
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh # http를 통해 /actuator/refresh 엔트포인트 노출
 
 polar:
   greeting: Welcome to the local book catalog!
