CH5.2-Book테이블 생성을 위한 sql
애플리케이션 시작시 자동으로 sql실행을 통해 테이블 생성

--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -30,6 +30,9 @@ spring:
     hikari: # 연결 재상용을 위한 연결 폴링의 한 종류
       connection-timeout: 2000 # 풀에서 연결 객체를 얻기 위해 기다리는 최대 시간
       maximum-pool-size: 5 # 히카리가 풀에서 유지할 수 있는 최대 연결 객체 수
+  sql:
+    init:
+      mode: always # 애플리케이션 시작 시 sql명령 실행
 management:
   endpoints:
     web:
