--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
         multiplier: 1.1 # 지연 시간 계산 승수
   datasource:
     username: user
-    password: passwrod
+    password: password
     url: jdbc:postgresql://localhost:5432/polardb-catalog
     hikari: # 연결 재상용을 위한 연결 폴링의 한 종류
       connection-timeout: 2000 # 풀에서 연결 객체를 얻기 위해 기다리는 최대 시간
