CH5.4-플라이웨이 사용
schema.sql 내용 변경 및 flyway 사용을 위한 위치 변경
테스트 컨테이너가 flyway를 사용하여 테스트도 진행 가능 -> git action에서 진행하는 build and test 동작을 가능하고 성공할 수 있도록 해줌

--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2025.0.0") // 사용할 스프링 클라우드 버전
-	set('testcontainersVersion', "1.17.3") // 사용할 테스트컨테이너 버전
+	set('testcontainersVersion', "1.19.8") // 사용할 테스트컨테이너 버전
 }
 
 dependencies {
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.retry:spring-retry'
+	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.flywaydb:flyway-database-postgresql'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'  // 메타데이터가 자동으로 생성되어, 속성의 자동 완성 및 유형 검사가 가능함
