--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
       uri: http://localhost:8888 # 설정 서버의 url주소
       request-connect-timeout: 5000 # 설정 서버에 연결될 때까지 최대로 기다리는 시간
       request-read-timeout: 5000 # 설정 서버에서 데이터를 읽을 떄까지 최대로 기다리는 시간
-      fail-fast: true # 설정 서버 연결 실패를 심각한 실패로 간주
+      fail-fast: false # 설정 서버 연결 실패를 심각한 실패로 간주
       retry: # 심각한 실패(fail-fast: true)일 경우만 retry가 활성화 된다.
         max-attempts: 6 # 최대 시도 횟수
         initial-interval: 1000 # 최초 재시도 지연 시간
@@ -30,9 +30,7 @@ spring:
     hikari: # 연결 재상용을 위한 연결 폴링의 한 종류
       connection-timeout: 2000 # 풀에서 연결 객체를 얻기 위해 기다리는 최대 시간
       maximum-pool-size: 5 # 히카리가 풀에서 유지할 수 있는 최대 연결 객체 수
-  sql:
-    init:
-      mode: always # 애플리케이션 시작 시 sql명령 실행
+
 management:
   endpoints:
     web:
