--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   datasource:
     username: user
     password: password
-    url: jdbc:postgresql://localhost:5432/polardb-catalog
+    url: jdbc:postgresql://localhost:5432/polardb_catalog
     hikari: # 연결 재상용을 위한 연결 폴링의 한 종류
       connection-timeout: 2000 # 풀에서 연결 객체를 얻기 위해 기다리는 최대 시간
       maximum-pool-size: 5 # 히카리가 풀에서 유지할 수 있는 최대 연결 객체 수
