--- a/.github/workflows/catalog-service-commit-stage.yml
+++ b/.github/workflows/catalog-service-commit-stage.yml
@@ -55,7 +55,7 @@ jobs:
       security-events: write
     steps:
       - name: Checkout source code
-        uses: actions/checkout@@v4
+        uses: actions/checkout@v4
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
