--- a/.github/workflows/catalog-service-commit-stage.yml
+++ b/.github/workflows/catalog-service-commit-stage.yml
@@ -4,7 +4,7 @@ on: push
 env:
   REGISTRY: ghcr.io # Git Hub Container Registry(깃허브 컨테이너 저장소 활용)
   IMAGE_NAME: jihoon0413/catalog-service
-  VERSION: lastest
+  VERSION: latest
 
 jobs:
   build:
@@ -65,8 +65,8 @@ jobs:
       - name: Build container image
         run: |
           chmod +x gradlew
-          ./gradlew -p catalog-service bootBuildImage \ 
-          --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          ./gradlew -p catalog-service bootBuildImage
+            --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
       - name: OCI image vulnerability scanning
         uses: anchore/scan-action@v3
         id: scan
