--- a/.github/workflows/catalog-service-commit-stage.yml
+++ b/.github/workflows/catalog-service-commit-stage.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Build container image
         run: |
           chmod +x gradlew
-          ./gradlew bootBuildImage
+          ./gradlew bootBuildImage \
             --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
         working-directory: catalog-service
       - name: OCI image vulnerability scanning
