--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 9001
+  shutdown: graceful # 우아한 종료 활성화(서버가 종료돼도 일정 시간 동안 요청을 받음)
   tomcat:
     connection-timeout: 2s  # Time to wait for TCP (3-way handshake) link
     keep-alive-timeout: 15s # Time to wait for the next request since the last response
@@ -10,6 +11,8 @@ server:
 spring:
   application:
     name: catalog-service # config-server에서 설정한 spring:application:name 과 같아야 해당 uri로 설정을 가져올 수 있음
+  lifecycle:
+    timeout-per-shutdown-phase: 15s # 우아한 종료 기간
   config:
     import: "optional:configserver:" # 가능하면 서버에서 설정 데이터를 가져오도록 설정 -> 설정 서버가 동작하지 않았도 애플리케이션이 동작할 수 있도록 설정
   cloud:
