--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       max-create-connection-time: 2s
       initial-size: 5
       max-size: 10
-  flyway:
+  flyway: # R2DBC? ?? ??? JDBC? flyway? ??
     user: ${spring.r2dbc.username}
     password: ${spring.r2dbc.password}
     url: jdbc:postgresql://localhost:5432/polardb_order
