--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
   shutdown: graceful
   netty:
     connection-timeout: 2s
-    idle-timeout: 15s # ???? ???? ?? ?? tcp??? ??? ???? ??
+    idle-timeout: 15s # 데이터가 전송되지 않는 경우 tcp연결을 닫기 전에 기다리는 시간
 
 spring:
   application:
     name: order-service
   lifecycle:
-    timeout-per-shutdown-phase: 15s # 15?? ??? ?? ?? ??
+    timeout-per-shutdown-phase: 15s # 15초간 우아한 종료 기간 정의
   r2dbc:
     username: user
     password: password
@@ -18,7 +18,7 @@ spring:
       max-create-connection-time: 2s
       initial-size: 5
       max-size: 10
-  flyway: # R2DBC? ?? ??? JDBC? flyway? ??
+  flyway: # R2DBC에 대한 설정을 JDBC로 flyway에 연결
     user: ${spring.r2dbc.username}
     password: ${spring.r2dbc.password}
     url: jdbc:postgresql://localhost:5432/polardb_order
