--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.testcontainers:r2dbc'
+	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'// 모의 웹 서버를 실행하는 유틸리티
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
