--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -18,10 +18,17 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2025.0.0") // 사용할 스프링 클라우드 버전
+	set('testcontainersVersion', "1.19.8") // 사용할 테스트컨테이너 버전
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.retry:spring-retry'
 
 
 	runtimeOnly 'org.postgresql:postgresql'
@@ -42,6 +49,13 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"  // 스프링 클라우드 의존성 관리를 위한 BOM(Bill of Material)
+		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"  // 컨테이너 의존성 관리를 위한 BOM
+
+	}
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
