--- a/.github/workflows/order-service-commit-stage.yml
+++ b/.github/workflows/order-service-commit-stage.yml
@@ -48,11 +48,10 @@ jobs:
           java-version: 17
           cache: gradle
       - name: Build container image
-        run: \
+        run: |
           chmod +x gradlew
           ./gradlew bootBuildImage \
             --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
-        working-directory: order-service
       - name: OCI image vulnerability scanning
         uses: anchore/scan-action@v3
         id: scan
