--- a/.github/workflows/order-service-commit-stage.yml
+++ b/.github/workflows/order-service-commit-stage.yml
@@ -52,6 +52,7 @@ jobs:
           chmod +x gradlew
           ./gradlew bootBuildImage \
             --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+        working-directory: order-service
       - name: OCI image vulnerability scanning
         uses: anchore/scan-action@v3
         id: scan
