--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -23,9 +23,13 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webmvc'
+
+//	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webmvc'
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
+
+	testImplementation 'io.projectreactor:reactor-test'
+//	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 dependencyManagement {
