--- a/polar-deployment/docker/docker-compose.yml
+++ b/polar-deployment/docker/docker-compose.yml
@@ -15,6 +15,20 @@ services:
       - BPL_DEBUG_PORT=8001     # JVM이 디버깅 연결을 하는 port 번호
       - SPRING_DATASOURCE_URL=jdbc:postgresql://polar-postgres:5432/polardb_catalog
       - SPRING_PROFILES_ACTIVE=testdata
+  order-service:
+    depends_on:
+      - polar-postgres
+    image: "order-service"
+    container_name: "order-service"
+    ports:
+      - 9002:9002
+      - 8002:8002
+    environment:
+      - BPL_JVM_THREAD_COUNT=50 # 패키토 빌드팩 환경 변수(메모리 계산을 위한 스레드 수 설정)
+      - BPL_DEBUG_ENABLED=true  # JVM 디버깅 연결을 가능하게 하기 위한 설정
+      - BPL_DEBUG_PORT=8002     # JVM이 디버깅 연결을 하는 port 번호
+      - SPRING_R2DBC_URL=r2dbc:postgresql://polar-postgres:5432/polardb_order
+      - SPRING_FLYWAY_URL=jdbc:postgresql://polar-postgres:5432/polardb_order
 
   polar-postgres:
     image: "postgres:14.12"
