--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webmvc'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
 	testImplementation 'io.projectreactor:reactor-test'
 //	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
