--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -20,13 +20,17 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2025.0.0")
+	set('testcontainersVersion', "1.19.8") // 사용할 테스트컨테이너 버전
+
 }
 
 dependencies {
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	implementation 'org.springframework.session:spring-session-data-redis'
+	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -34,6 +38,7 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
 	}
 }
 
