--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.retry:spring-retry'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit' //스프링 클라우드 스트림 rabbitmq
 
 
 	runtimeOnly 'org.postgresql:postgresql'
@@ -46,6 +47,7 @@ dependencies {
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.testcontainers:r2dbc'
 	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'// 모의 웹 서버를 실행하는 유틸리티
+	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder' // 바인더 통합 테스트
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
