gicaction-오타 수정

--- a/.github/workflows/dispatcher-service-commit-stage.yml
+++ b/.github/workflows/dispatcher-service-commit-stage.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-verson: 17
+          java-version: 17
           cache: gradle
 
       - name: Build, unit tests and integration tests
