CH11.4-oauth2 라이브러리 추가
keycloak와 연동하기 위해 oauth2 기술 사용, config에 oauth2Login 설정,

keycloak와 상호작용하기위해 yml파일 수정

--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -20,6 +20,17 @@ spring:
     timeout: 10m
     redis:
       namespace: polar:edge
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak: # security에서 클라우드 등록을 식별하는 이름
+            client-id: edge-service # keycloak에 정의된 oauth2 클라이언트 식별자
+            client-secret: polar-keycloak-secret
+            scope: openid
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8080/realms/PolarBookshop # 특정 영역에 oauth2, oidc 관련 엔드포인드를 알려주는 url
   cloud:
     gateway:
       server:
