--- a/.github/workflows/edge-service-commit-stage.yml
+++ b/.github/workflows/edge-service-commit-stage.yml
@@ -36,7 +36,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-      security-events: wrti
+      security-events: write
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
