--- a/.github/workflows/edge-service-commit-stage.yml
+++ b/.github/workflows/edge-service-commit-stage.yml
@@ -17,11 +17,12 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
       - name: Set up JDK
-        uses: action/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
           cache: gradle
+
       - name: Build, unit tests and integration tests
         run: |
           chmod +x gradlew
