CH12.1-roles 역할 포함
인증, 인가 할 때 roles에 대한 정보도 제공받을 수 있도록 설정.

그리고 이 정보를 직접 활용 및 테스트 수정

--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
           keycloak: # security에서 클라우드 등록을 식별하는 이름
             client-id: edge-service # keycloak에 정의된 oauth2 클라이언트 식별자
             client-secret: polar-keycloak-secret
-            scope: openid
+            scope: openid,roles # 사용자 role에 대한 정보를 제공받는다.
         provider:
           keycloak:
             issuer-uri: http://localhost:8080/realms/PolarBookshop # 특정 영역에 oauth2, oidc 관련 엔드포인드를 알려주는 url
