--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -33,6 +33,11 @@ spring:
     hikari: # 연결 재상용을 위한 연결 폴링의 한 종류
       connection-timeout: 2000 # 풀에서 연결 객체를 얻기 위해 기다리는 최대 시간
       maximum-pool-size: 5 # 히카리가 풀에서 유지할 수 있는 최대 연결 객체 수
+  security:
+    oauth2:
+      resourceserver:
+        jwt: # access token의 형식을 jwt와 opaque 중에 선택
+          issuer-uri: http://localhost:8080/realms/PolarBookshop # 토큰을 받아올 주소
 
 management:
   endpoints:
