--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -48,9 +48,9 @@ dependencyManagement {
 }
 
 bootBuildImage {
-	builder = "docker.io/paketobuildpacks/builder-jammy-base"
-	imageName = "${project.name}"
-	environment = ["BP_JVM_VERSION": "17"]
+//	builder = "docker.io/paketobuildpacks/builder-jammy-base"
+	imageName= "${project.name}"
+	environment = ["BP_JVM_VERSION" : "17.*"]
 }
 
 
