--- a/.github/workflows/edge-service-commit-stage.yml
+++ b/.github/workflows/edge-service-commit-stage.yml
@@ -32,7 +32,7 @@ jobs:
 
   package:
     name: Package and Publish
-    if: ${{ github.ref == 'refs/head/main'}}
+    if: ${{ github.ref == 'refs/heads/main'}}
     needs: [ build ]
     runs-on: ubuntu-22.04
     permissions:
@@ -48,11 +48,11 @@ jobs:
           distribution: temurin
           java-version: 17
           cache: gradle
-      - name: Build container iamge
+      - name: Build container image
         run: |
           chmod +x gradlew
           ./gradlew bootBuildImage \
-           --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+            --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
         working-directory: edge-service
       - name: Log into container registry
         uses: docker/login-action@v3
