--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -22,6 +22,7 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-config-server' // 설정 서버를 구축할 수 있는 라이브러리
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -31,6 +32,11 @@ dependencyManagement {
 	imports { // 스프링 클라우드 의존성 관리를 위한 BOM(Bill of Material)
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	} // 스프링 클라우드 관련 모듈을 추가할 때 버전을 따로 지정하지 않아도 BOM에 맞춰 자동으로 알맞은 버전이 적용
+}
+
+bootBuildImage {  // 빌드팩을 사용해 OCI 이미지를 빌드하기 위한 플러그인 작엄(패키토)
+	imageName = "${project.name}"
+	environment = ["BP_JVM_VERSION": "17.*"]
 }
 
 tasks.named('test') {
