--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -25,7 +25,7 @@ ext {
 }
 
 dependencies {
-
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
