--- a/dispatcher-service/src/main/resources/application.yml
+++ b/dispatcher-service/src/main/resources/application.yml
@@ -31,3 +31,19 @@ spring:
     username: user
     password: password
     connection-timeout: 5s
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bindings, configprops, env, functions, health, heapdump, info, loggers, mappings, prometheus
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      probes:
+        enabled: true
