--- a/dispatcher-service/build.gradle
+++ b/dispatcher-service/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
