--- a/dispatcher-service/src/main/resources/application.yml
+++ b/dispatcher-service/src/main/resources/application.yml
@@ -47,3 +47,6 @@ management:
       show-components: always
       probes:
         enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
