--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	// 리소스를 edge-service라는 사용자, 서버 외의 3자가 요청하기 때문에 edge에서 보내는 jwt를 검증하기 위해 사용
 
 
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.postgresql:r2dbc-postgresql'
 	runtimeOnly 'org.flywaydb:flyway-core'
