--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
+	runtimeOnly 'io.github.resilience4j:resilience4j-micrometer'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'io.projectreactor:reactor-test'
