--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -127,8 +127,11 @@ management:
     health:
       show-details: always
       show-components: always
-  probes:
-    enabled: true
-  group:
-    readiness:
-      include: readinessState,redis # 애플리케이션과 redis의 상태를 모두 확인하여 상태를 정해야함 -> redis없이 서비스를 할 수 없기 때문에 준비 상태
+      probes:
+        enabled: true
+      group:
+        readiness:
+          include: readinessState,redis # 애플리케이션과 redis의 상태를 모두 확인하여 상태를 정해야함 -> redis없이 서비스를 할 수 없기 때문에 준비 상태
+  metrics:
+    tags:
+      application: ${spring.application.name}
