CH13.4-오픈텔레메트리를 사용해 스프링 부트 추적 구성하기
클라우드 환경에서 edge가 다른 서비스를 이용할 때를 추적하기 위해서 스팬, 태그 개념을 사용해야함

--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -39,6 +39,10 @@ spring:
         jwt: # access token의 형식을 jwt와 opaque 중에 선택
           issuer-uri: http://localhost:8080/realms/PolarBookshop # 토큰을 받아올 주소
 
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
 management:
   endpoints:
     web:
