--- a/catalog-service/build.gradle
+++ b/catalog-service/build.gradle
@@ -27,6 +27,7 @@ ext {
 	set('springCloudVersion', "2025.0.0") // 사용할 스프링 클라우드 버전
 	set('testcontainersVersion', "1.19.8") // 사용할 테스트컨테이너 버전
 	set('testKeycloakVersion', "3.3.1")
+	set('otelVersion', "1.33.3")
 }
 
 dependencies {
@@ -42,6 +43,7 @@ dependencies {
 
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}" // 바이트코드를 통해 동적으로 자바 코드를 계측하는 오픈텔레메트리 에이전트
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'  // 메타데이터가 자동으로 생성되어, 속성의 자동 완성 및 유형 검사가 가능함
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
